# mcumgr-toolkit

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: audit.yml  ci.yml  python-docs.yml  python.yml
mcumgr-toolkit-cli/src/groups/: firmware.rs
mcumgr-toolkit-python/: README.md
mcumgr-toolkit-python/src/: lib.rs  return_types.rs
mcumgr-toolkit/src/: client.rs
mcumgr-toolkit/src/client/: firmware_update.rs
mcumgr-toolkit/src/commands/: fs.rs  image.rs  mod.rs  os.rs  shell.rs  zephyr.rs
zephyr-mcumgr/: Cargo.toml
zephyr-mcumgr-cli/: Cargo.toml
zephyr-mcumgr-cli/src/: args.rs  client.rs  file_read_write.rs  formatting.rs  main.rs  progress.rs
zephyr-mcumgr-cli/src/groups/: fs.rs  image.rs  mcuboot.rs  mod.rs  os.rs  raw.rs  shell.rs  zephyr.rs
zephyr-mcumgr-python/: .gitignore  Cargo.toml  README.md  pyproject.toml  zephyr_mcumgr.pyi
zephyr-mcumgr-python/src/: lib.rs  return_types.rs
zephyr-mcumgr/src/: client.rs  connection.rs  lib.rs  smp_errors.rs
zephyr-mcumgr/src/commands/: fs.rs  image.rs  mod.rs  os.rs  shell.rs
zephyr-mcumgr/src/transport/: mod.rs  serial.rs
