[workspace]
resolver = "3"
members = ["zephyr-mcumgr", "zephyr-mcumgr-cli", "zephyr-mcumgr-python"]

[workspace.package]
version = "0.6.2"
authors = ["Finomnis <finomnis@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/zephyr-mcumgr-client"
description = "Software suite for Zephyr's MCUmgr protocol"
keywords = ["zephyr", "mcumgr", "smp"]

exclude = ["/.gitignore", "/.github/"]

[workspace.dependencies]
zephyr-mcumgr = { version = "0.6.2", path = "./zephyr-mcumgr" }
serialport = { version = "4.7.3", default-features = false }
thiserror = "2.0.17"
miette = "7.6.0"
rand = "0.9.2"
base64 = "0.22.1"
crc = "3.4.0"
ringbuf = "0.4.8"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_json = "1.0.145"
serde_repr = "0.1.20"
ciborium = "0.2.2"
log = "0.4.28"
env_logger = "0.11.8"
clap = "4.5.51"
strum = "0.27.2"
indicatif = "0.18.3"
chrono = "0.4.42"
pyo3 = "0.27.2"
pyo3-stub-gen = "0.18.0"
pyo3-log = "0.13.2"
serde-pyobject = "0.8.0"
hex = "0.4.3"
regex = "1.12.2"
termcolor = "1.4.1"

[patch.crates-io]
pyo3-stub-gen = { git = 'https://github.com/finomnis/pyo3-stub-gen.git', rev = '1999efc189fe29e35d099acd5e5ec4a5d78190db' }
pyo3-stub-gen-derive = { git = 'https://github.com/finomnis/pyo3-stub-gen.git', rev = '1999efc189fe29e35d099acd5e5ec4a5d78190db' }
