[package]
name = "zephyr-mcumgr-cli"
description = "Command-line interface for Zephyr's MCUmgr protocol"
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "zephyr-mcumgr"
path = "src/main.rs"

[dependencies]
zephyr-mcumgr.workspace = true
serialport = { workspace = true, features = ["usbportinfo-interface"] }
miette = { workspace = true, features = ["fancy"] }
env_logger.workspace = true
clap = { workspace = true, features = ["derive"] }
log.workspace = true
